fix grid gap property

--- a/css/_features.scss
+++ b/css/_features.scss
@@ -6,12 +6,14 @@
     grid-template-columns: 1fr;
     max-width: 880px;
     margin: 0 auto;
-    column-gap: 150px;
-    row-gap: 80px;
+    // column-gap: 150px;
+    // row-gap: 80px;
+    gap: 80px 150px;
 
     @include breakpoint(medium) {
       grid-template-columns: repeat(2, 1fr);
-      row-gap: 95px;
+      // row-gap: 95px;
+      gap: 95px 150px;
     }
   }
 
